--- a/Gobot/Gobot/Content/Menu.scss
+++ b/Gobot/Gobot/Content/Menu.scss
@@ -27,7 +27,7 @@
         background-color: $menuColor;
     }
 
-    > #account { 
+    > #compte { 
         $height: 98px;
         height: $height; 
 
