--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -8,11 +8,10 @@
 
 <div id="accountInfo">
     <div>
-        <img id="img" src="~/Images/anonymous.png" />
+        <img id="img" src="@Model.ProfilPic" />
         <div id="border"></div>
     </div>
     <span id="name">@Html.DisplayFor(model => model.Username)</span>
-    <button id="test">test</button>
 </div>
 
 <div class="info">
@@ -31,71 +30,84 @@
 <div class="info" id="credits">
     <div class="info_logo"></div>
     <div>
-        <h1>@Html.DisplayFor(model => model.Credits) <b>GOBOT CREDITS</b></h1>
-        <h4>1 Gobot credit = 0.01$</h4>
-    </div>
-    <div>
-        <a href="#" id="buy"><h6>ACHETER</h6></a>
+        <h1>@Html.DisplayFor(model => model.Credits)<b> GOBOT CREDITS</b></h1>
+        @*<h4>1 Gobot credit = 0.01$</h4>*@
     </div>
     <div>
         <a href="#" id="trade">
-            <h5>REGARDER UNE</h5>
-            <h2><b>ANNONCE</b></h2>
+            <h2>REGARDER UNE</h2>
+            <h3 class="grey">ANNONCE</h3>
         </a>
+    </div>
+    <div>
+        <a class="whiteLink" href="#" id="buy"><h2>ACHETER</h2></a>
     </div>
 </div>
 
 <div class="info" id="bets">
     <div class="info_logo"></div>
     <div>
-        <h1 id="total">300 <b>VICTOIRES</b></h1>
+        <h1 id="total">@Html.DisplayFor(model => model.Wins)<grey> VICTOIRES</grey></h1>
     </div>
     <div>
-        <h1 id="wins">150<b>PARTIES</b></h1>
+        <h1 id="wins">@Html.DisplayFor(model => model.Games)<grey> PARTIES</grey></h1>
     </div>
     <div>
-        <h1 id="ratio">50% <b>PARTIES GAGNÉES</b></h1>
+        <h1 id="ratio">
+            @if (Model.Games == 0)
+            {
+                @:0
+            }
+            else
+            {
+                @(Math.Round((double)Model.Wins / Model.Games * 100));
+            }%<grey> PARTIES GAGNÉES</grey>
+        </h1>
+
     </div>
+
 </div>
 
 <div class="info" id="creditStats">
     <div class="info_logo"></div>
     <div>
-        <h1 id="wonLoss"><b>850</b>/<b>400</b>VICTOIRES/DÉFAITES</h1>
+        <h1 id="wonLoss"><green>850</green>/<red>400</red> GAGNÉS/PERDUS</h1>
     </div>
     <div>
-        <h1>200<b>ACHETÉS</b></h1>
+        <h1>0<grey> ACHETÉS</grey></h1>
     </div>
-    <a href="#" class="darkBG">
-        <h5>ACHETER DES CRÉDITS</h5>
-        <h4><grey>DE GOBOTTER</grey></h4>
-    </a>
+    <div>
+        <a href="#" class="darkBG">
+            <h2>ACHETER DES CRÉDITS</h2>
+            <h3 class="grey">DE GOBOTTER</h3>
+        </a>
+    </div>
 </div>
 
 <div class="info" id="transactions">
     <div class="info_logo"></div>
     <div>
-        <h1 id="fromGB">8 <b>OBJETS ACHETÉS</b></h1>
-        <h2>DE GOBOTTER</h2>
+        <h1 id="fromGB">0<grey> OBJETS ACHETÉS</grey></h1>
+        <h2 class="grey">DE GOBOTTER</h2>
     </div>
     <div>
-        <h1>525 <b>CRÉDITS TOTAL</b></h1>
+        <h1>525<grey> CRÉDITS TOTAL</grey></h1>
     </div>
     <div>
-        <button><h3><grey>MES</grey></h3> <h5>TRANSACTIONS</h5></button>
+        <a><h3 class="grey">MES</h3> <h2>TRANSACTIONS</h2></a>
     </div>
 </div>
 
 <div class="info" id="matches">
     <div class="info_logo"></div>
     <div>
-        <h1>250<b>PARTIES REGARDÉES</b></h1>
+        <h1>0<grey> PARTIES REGARDÉES</grey></h1>
     </div>
     <div>
-        <h1>CLOUD6<b>ÉQUIPE FAVORITE</b></h1>
+        <h1>CLOUD6<grey> ÉQUIPE FAVORITE</grey></h1>
     </div>
     <div>
-        <a><h2>VOIR LES</h2><h1>ÉQUIPES</h1></a>
+        <a><h3 class="grey">VOIR LES</h3><h2>ÉQUIPES</h2></a>
     </div>
 </div>
 
@@ -103,6 +115,13 @@
     <script>
         $(function () {
             onResize();
+
+            $(".info > div > a").each(function () {
+                $(this).parent().css("float", "right");
+            });
+            $(".info > div > :not(a)").each(function () {
+                $(this).parent().css("padding", "0 15px");
+            });
         });
 
         $(window).resize(function () {
@@ -113,8 +132,13 @@
             h_align_window($(".info"));
             var elems = $(".info > div:not(:first-of-type)");
             $(".info > div:not(:first-of-type)").each(function () {
-                v_align($(this).children(), $(this), getHeightOfChilds($(this)))
+                if ($(this).children().children().length > 0 && $(this).children().height() == $(this).height())
+                    v_align($(this).children().children(), $(this), getHeightOfChilds($(this).children()));
+                else
+                    v_align($(this).children(), $(this), getHeightOfChilds($(this)))
             });
         }
+
+        
     </script>
 }
