--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -41,16 +41,16 @@ img {
   visibility: hidden;
   opacity: 0; }
 
-.grey {
+.grey, grey {
   color: #626262; }
 
-.green {
+.green, green {
   color: #51c24b; }
 
-.red {
+.red, red {
   color: #963434; }
 
-.white {
+.white, white {
   color: white; }
 
 #error_overlay, #js_error {
@@ -117,7 +117,8 @@ img {
 
 button, a, h1, h2, h3, h4, h5, h6 {
   position: relative;
-  display: block; }
+  display: block;
+  text-align: center; }
 
 h1, h2, h3, h4, h5, h6 {
   font: italic 900 40px Lato, Arial, sans-serif;
@@ -126,8 +127,8 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0; }
 
 h1 {
-  font-size: 40px;
-  line-height: 32px; }
+  font-size: 36px;
+  line-height: 30px; }
 
 h2 {
   font-size: 24px; }
@@ -148,7 +149,10 @@ h6 {
   font-size: 36px; }
 
 span {
-  font: 300 14px Lato, sans-serif; }
+  font: 400 14px Lato, sans-serif; }
+
+green {
+  color: #51c24b; }
 
 .info {
   position: relative;
@@ -159,6 +163,21 @@ span {
   height: auto;
   background-color: #232323;
   margin: 2px auto; }
+  .info a {
+    padding: 0 25px; }
+  .info a:not(.whiteLink) {
+    background-color: #202020; }
+  .info a:not(.whiteLink):hover {
+    background-color: #1b1b1b; }
+    .info a:not(.whiteLink):hover > .grey {
+      color: #ffbf5c; }
+  .info .whiteLink {
+    background-color: #eeeeee !important;
+    color: #232323 !important; }
+  .info .whiteLink > h2 {
+    color: #232323; }
+  .info .whiteLink:hover {
+    background-color: #ffbf5c !important; }
   .info b {
     color: #5f5f5f !important;
     font-weight: inherit; }
@@ -203,19 +222,9 @@ span {
 #creditStats > div:first-of-type {
   background-image: url("/Images/stat_winLoss.png"); }
 
-/*#creditStats, #transactions {
-    button, a {
-        background-color: $darkerGrey;
-    }
-}*/
 #transactions > div:first-of-type {
   background-image: url("/Images/stat_transactions.png"); }
 
 #matches > div:first-of-type {
   background-image: url("/Images/stat_matches.png"); }
-
-.overlaid {
-  -webkit-transform: scale(0.97);
-  transform: scale(0.97);
-  overflow: hidden; }
 
