--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -138,17 +138,14 @@ img {
     background-color: #f16651; }
   #navBig > #compte {
     height: 98px; }
-    #navBig > #compte > #img {
-      background-size: 56px 56px; }
-    #navBig > #compte > #border {
-      position: absolute;
-      top: 17px;
-      left: 13px;
+    #navBig > #compte > div > img {
+      position: relative;
       width: 56px;
       height: 56px;
+      top: 17px;
+      margin: 0 auto;
       border-radius: 50%;
-      border: 4px solid black;
-      opacity: 0.30; }
+      border: 4px solid rgba(0, 0, 0, 0.3); }
   #navBig > a > div {
     position: relative;
     top: 0;
