--- a/Gobot/Gobot/Content/Menu.scss
+++ b/Gobot/Gobot/Content/Menu.scss
@@ -31,19 +31,14 @@
         $height: 98px;
         height: $height; 
 
-        > #img { background-size: 56px 56px; }
-        > #border {
-            $borderHeight: 56px;
-            $borderWidth: 4px;
-
-            position: absolute;
-            top: $height / 2 - $borderHeight / 2 - $borderWidth;
-            left: ($navWidth - $borderHeight) / 2 - $borderWidth;
+        > div > img { 
+            position: relative;
             width: 56px;
-            height: $borderHeight;
+            height: 56px;
+            top: ($height - 64px) / 2;
+            margin: 0 auto;
             border-radius: 50%;
-            border: $borderWidth solid black;
-            opacity: 0.30;
+            border: 4px solid rgba(0,0,0,0.3);
         }
     }
 
