--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -16,8 +16,7 @@
 <body>
     <div id="navBig">
         <a id="compte" href="@Url.Action("Index", "Account")">
-            <div id="img" style="background-image: url(@Model.ProfilPic)"></div>
-            <div id="border"></div>
+            <div id="img"><img src="@Model.ProfilPic"/></div>
         </a>
         <a id="matchs"  href="@Url.Action("Index", "Watch")"> 
             <div style="background-image: url(@Url.Content("~/Images/matches.png"))"></div>
@@ -188,7 +187,7 @@
 
     function v_align(e, p, eH) {
         var pos = p.height() / 2 - eH / 2;
-        e.css("top", pos);
+        e.css("top", pos > 0 ? pos : 0);
     }
 
     function getHeightOfChilds(e) {
