--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -245,15 +245,93 @@ h5 {
     width: auto !important;
     padding: 0 !important; }
 
+#userOptions {
+  width: 130px;
+  background-color: #1f1f1f;
+  cursor: pointer; }
+  #userOptions > img {
+    width: 60px;
+    padding-top: 20px;
+    padding-bottom: 8px;
+    margin: 0 35px; }
+  #userOptions > h3 {
+    color: #404040;
+    text-transform: uppercase;
+    font-weight: 900 !important;
+    top: 0 !important; }
+
+#userOptions:hover {
+  background-color: #1b1b1b; }
+  #userOptions:hover > img {
+    content: url("/Images/settings_hover.png"); }
+  #userOptions:hover > h3 {
+    color: #ffbf5c; }
+
+#rank > h2:first-of-type, #rep > h2:first-of-type {
+  padding-top: 5px; }
+
 #rank {
   background-color: #1b1b1b; }
+  #rank > img {
+    display: block;
+    position: relative;
+    width: 40px;
+    margin: 11px auto 2px auto; }
 
 #rep {
   float: left;
   position: relative;
   top: 0;
   left: 0;
-  height: 100%; }
+  width: calc(100% - $height) !important;
+  height: 130px;
+  padding: 0 !important;
+  margin: 0; }
+  #rep > h2 {
+    text-align: left;
+    text-indent: 20px;
+    margin-bottom: 15px; }
+  #rep > h3 {
+    width: 100%;
+    text-align: center;
+    top: -10px !important; }
+
+#rep-bar {
+  position: relative;
+  float: left;
+  display: block;
+  top: 0;
+  left: 30px;
+  width: 100% !important;
+  height: 51px; }
+  #rep-bar > div:first-of-type, #rep-bar > div:last-of-type {
+    position: relative;
+    width: 51px;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 1; }
+  #rep-bar > div:first-of-type {
+    float: left;
+    background-image: url("/Images/rep_start.png"); }
+  #rep-bar > div:last-of-type {
+    float: right;
+    background-image: url("/Images/rep_end.png"); }
+  #rep-bar > #xp {
+    position: absolute;
+    width: calc(100% - 100px);
+    left: 50px;
+    height: 12px;
+    top: 19px;
+    background-color: white;
+    z-index: 0; }
+    #rep-bar > #xp > #xpDone {
+      position: relative;
+      top: 0;
+      left: 0;
+      height: 100%;
+      background-color: #51c24b;
+      width: 0; }
 
 #credits > div:first-of-type {
   background-image: url("/Images/gcCredit.png"); }
