--- a/Gobot/Gobot/Content/Account.scss
+++ b/Gobot/Gobot/Content/Account.scss
@@ -160,7 +160,8 @@ h5 { font: 400 14px Lato, sans-serif; color: white;}
         display: block;
         position: relative;
         width: 40px;
-        margin: 11px auto 2px auto;
+        height: 50px;
+        margin: 10px auto 2px auto;
     }
 }
 
