--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -334,6 +334,28 @@ h5 {
       background-color: #51c24b;
       width: 0; }
 
+#options > div {
+  width: 33.3%;
+  padding: 50px 0 !important;
+  height: auto;
+  cursor: pointer; }
+  #options > div > img {
+    display: block;
+    position: relative;
+    width: 180px;
+    margin: 0 auto; }
+  #options > div > h2 {
+    margin-top: 50px;
+    text-transform: uppercase;
+    width: 60%;
+    margin: 20px auto;
+    color: #626262; }
+
+#options > div:hover {
+  background-color: #1f1f1f; }
+  #options > div:hover > h2 {
+    color: #eeeeee; }
+
 #credits > div:first-of-type {
   background-image: url("/Images/gcCredit.png"); }
 
@@ -348,4 +370,28 @@ h5 {
 
 #matches > div:first-of-type {
   background-image: url("/Images/stat_matches.png"); }
+
+@media screen and (max-width: 1325px) {
+  #rep > h2 {
+    margin-bottom: 20px; }
+  #rank > h2 {
+    margin-bottom: 15px; }
+  h1 {
+    font-size: 28px; }
+  h2 {
+    font-size: 19px; }
+  h3 {
+    font-size: 15px; }
+  h4 {
+    font-size: 13px; }
+  h5 {
+    font-size: 12px; } }
+
+@media screen and (max-width: 1100px) {
+  h1 {
+    font-size: 23px; }
+  h2 {
+    font-size: 16px; }
+  h3 {
+    font-size: 14px; } }
 
