--- a/Gobot/Gobot/Content/Account.scss
+++ b/Gobot/Gobot/Content/Account.scss
@@ -226,7 +226,32 @@ h5 { font: 400 14px Lato, sans-serif; color: white;}
     }
 
 #options {
+    > div { 
+        width: 33.3%; 
+        padding: 50px 0 !important;
+        height: auto;
+        cursor: pointer;
 
+        > img {
+            display: block;
+            position: relative;
+            width: 180px;
+            margin: 0 auto;
+        }
+
+        > h2 {
+            margin-top: 50px;
+            text-transform: uppercase;
+            width: 60%;
+            margin: 20px auto;
+            color: $grey;
+        }
+    }
+
+    > div:hover {
+        background-color: #1f1f1f;
+        > h2 { color: $off-white; }
+    }
 }
 
 #credits > div:first-of-type        { background-image: url("/Images/gcCredit.png"); }
@@ -236,9 +261,17 @@ h5 { font: 400 14px Lato, sans-serif; color: white;}
 #matches > div:first-of-type        { background-image: url("/Images/stat_matches.png"); }
 
 @media screen and (max-width: 1325px) {
-    //h1 { font-size: px; }
-    //h2 { font-size: px; }
-    //h1 { font-size: px; }
-    //h1 { font-size: px; }
-    //h1 { font-size: px; }
+    #rep > h2 { margin-bottom: 20px; }
+    #rank > h2 { margin-bottom: 15px; }
+    h1 { font-size: 28px; }
+    h2 { font-size: 19px; }
+    h3 { font-size: 15px; }
+    h4 { font-size: 13px; }
+    h5 { font-size: 12px; }
+}
+
+@media screen and (max-width: 1100px) {
+    h1 { font-size: 23px; }
+    h2 { font-size: 16px; }
+    h3 { font-size: 14px; }
 }
