--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -15,12 +15,13 @@
         <a href="http://www.steamcommunity.com/id/@Model.SteamID" target="_blank"><h4 class="grey">Visiter le profil steam.</h4></a>
     </div>
     <div id="userOptions">
-        <img src="~/Images/settings.png" />
+        <img id="openOption" src="~/Images/settings.png" />
         <h3>Options</h3>
+        <img id="closeOption" src="~/Images/close.png"/>
     </div>
 </div>
 
-<div class="info" id="options">
+@*<div class="info" id="options">
     <div id="changeEmail">
         <img src="~/Images/mail.png" />
         <h2>Modifier mon adresse courriel</h2>
@@ -33,7 +34,7 @@
         <img src="~/Images/lock.png" />
         <h2>Modifier mon mot de passe</h2>
     </div>
-</div>
+</div>*@
 
 <div class="info">
     <div class="info_logo" id="rank">
@@ -61,7 +62,7 @@
         @*<h4 class="grey">1 Gobot credit = 0.01$</h4>*@
     </div>
     <div>
-        <a href="#" id="trade">
+        <a href="@Url.Action("Index", "Bet")" id="trade">
             <h2>REGARDER UNE</h2>
             <h3 class="grey">ANNONCE</h3>
         </a>
@@ -134,7 +135,7 @@
         <h1>CLOUD6<grey> ÉQUIPE FAVORITE</grey></h1>
     </div>
     <div>
-        <a><h3 class="grey">VOIR LES</h3><h2>ÉQUIPES</h2></a>
+        <a href="@Url.Action("Teams", "Stats")"><h3 class="grey">VOIR LES</h3><h2>ÉQUIPES</h2></a>
     </div>
 </div>
 
@@ -153,9 +154,8 @@
             onResize();
             posRepBar(true);
             levels = @Model.Level;
-            posOptionTabs();
         });
-        
+
         $(window).on('load', function() {
             animateRanks(1);
         });
@@ -164,22 +164,49 @@
             onResize();
             posRepBar(false);
         });
-        
-        $(document).on("click", "#options > div", function() {
-            if ($(this).attr('id') != "optionSubmit" && $(this).attr('id') != "optionForm") {
-                $("#options > div").not($(this)).each(function() {
-                    if ($(this).is(":visible"))
-                        $(this).hide();
-                    else
-                        $(this).show();
-                });
 
-                if ($("#optionForm").length == 0)
-                    showForm($(this).attr("id"));
-                else {
-                    $("#optionForm").remove();
-                    $("#optionSubmit").remove();
-                }
+        $(document).on("click", "#options > div", function() {
+            $("#options > div").not($(this)).each(function() {
+                if ($(this).is(":visible"))
+                    $(this).hide();
+                else
+                    $(this).show();
+            });
+
+            if ($("#optionForm").length == 0)
+                showForm($(this).attr("id"));
+            else {
+                $("#optionForm").remove();
+                $("#optionSubmit").remove();
+            }
+        });
+
+        $(document).on("click", "#optionSubmit:first-child", function() {
+            // SUBMIT FORM INFORMATION
+        });
+
+        $(document).on("click", "#optionSubmit:last-child", function() {
+            $("#options > form").remove();
+            $("#options > div").show();
+        });
+
+        $(document).on("click", "#userOptions", function() {
+            if ($("#options").length == 0) {
+                $('<div class="info" id="options"></div>').insertAfter("#accountInfo");
+                $("#options").append('<div id="changeEmail"><img src="/Images/mail.png"><h2>Modifier mon adresse courriel</h2></div>');
+                $("#options").append('<div id="changeImg"><img src="/Images/user.png"><h2 >Modifier ma photo de profil</h2></div>');
+                $("#options").append('<div id="changePwd"><img src="/Images/lock.png"><h2>Modifier mon mot de passe</h2></div>');
+                
+                $("#userOptions > h3, #openOption").hide();
+                $("#closeOption").show();
+
+                onResize();
+                posOptionTabs();
+            }
+            else {
+                $("#options").remove();
+                $("#userOptions > h3, #openOption").show();
+                $("#closeOption").hide();
             }
         });
 
@@ -233,18 +260,23 @@
         }
 
         function showForm(id) {
-            $("#options").append('<div id="optionForm"><div class="optionHeader"><img src="~/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div>');
+            $("#options").append('<form action="/Account/Index" enctype="multipart/form-data" method="post"><div id="optionForm"><div class="optionHeader"><img src="/Images/option_' + id + '.png" /><h2>' + $('#' + id).find("h2").text() + '</h2></div></div></form>');
+            
             if (id == "changeImg") {
-
+                $("#optionForm").append('<img id="UploadedImage" class="UploadedPoster" src="' + '@Url.Content(Model.ProfilPic)' + '"><input id="ImageUploader" name="ImageUploader" type="file">');
+                $("#optionForm").append('<input id="UploadButton" class="btn btn-primary" type="button" value="Choisir une image...">');
             }
             else if (id == "changePwd") {
-
+                $("#optionForm").append('<div><h2>Ancien <grey>mot de passe</grey></h2><input name="oldPwd" type="password"/></div>');
+                $("#optionForm").append('<div><h2>Nouveau <grey>mot de passe</grey></h2><input name="newPwd" type="password"/></div>');
+                $("#optionForm").append('<div><h2>Confirmer <grey>mot de passe</grey></h2><input name="confirmPwd" type="password"/></div>');
             }
             else {
-
+                $("#optionForm").append('<div><h2>Nouvelle<grey> adresse courriel</grey></h2><input name="newEmail" type="text"/></div>');
+                $("#optionForm").append('<div><h2>Confirmer<grey> adresse courriel</grey></h2><input name="confirmEmail" type="text"/></div>');
             }
 
-            $("#options").append('<div id="optionSubmit"><div><img src="~/Images/send.png" /><h2>Confirmer</h2></div><div><img src="~/Images/close.png" /><h3>Annuler</h3></div><img src="~/Images/accountOption_triangle.png" /></div>');
+            $("#options > form").append('<div id="optionSubmit"><input type="submit" value="Confirmer" /><div><img src="/Images/close_red.png" /><h3>Annuler</h3></div><img class="triangle" src="/Images/accountOption_triangle.png" /></div>');
             $('#' + id).hide();
         }
     </script>
