--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -299,15 +299,18 @@ h5 {
     color: #eeeeee; }
 
 #options > form {
+  height: 500px;
   width: 100%; }
   #options > form > div {
     height: 100%; }
 
 #optionForm {
+  float: left;
   width: 66.7%;
   background-color: #232323; }
 
 #optionSubmit {
+  float: right;
   width: 33.3%;
   background-color: #181818; }
   #optionSubmit > input {
